unpackaged/main/default/objects/Cout_de_transport__c/Cout_de_transport__c.object-meta.xml
<CustomObject>
    <label>Coût de transport</label>
    <nameField>
        <label>Nom du coût de transport</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coûts de transport</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>