unpackaged/main/default/objects/Cout_de_transport__c/fields/code_comptabilite_IRIS_FINANCE__c.field-meta.xml
<CustomField>
    <fullName>code_comptabilite_IRIS_FINANCE__c</fullName>
    <formula>IF(ISPICKVAL(Type_de_cout__c ,&quot;L&quot;),  Client__r.Code_comptabilite_IRIS_Finance_Cerba__c ,
IF (ISPICKVAL(Type_de_cout__c ,&quot;T&quot;), Fournisseur__r.Code_comptabilite_IRIS_Finance_Cerba__c, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code comptabilité IRIS FINANCE</label>
    <type>Text</type>
</CustomField>