unpackaged/main/default/objects/Cout_de_transport__c/fields/Date_de_demarrage__c.field-meta.xml
<CustomField>
    <fullName>Date_de_demarrage__c</fullName>
    <inlineHelpText>Merci de renseigner le 1er jour du mois de la mensualité.</inlineHelpText>
    <label>Date de démarrage</label>
    <required>true</required>
    <type>Date</type>
</CustomField>