unpackaged/main/default/objects/Cout_de_transport__c/fields/Derniere_mise_jour_des_montants__c.field-meta.xml
<CustomField>
    <fullName>Derniere_mise_jour_des_montants__c</fullName>
    <label>Dernière mise à jour des montants</label>
    <type>Date</type>
</CustomField>