unpackaged/main/default/objects/Cout_de_transport__c/fields/Elment_de_calcul_du_cout__c.field-meta.xml
<CustomField>
    <fullName>Elment_de_calcul_du_cout__c</fullName>
    <label>Élément de calcul du coût</label>
    <length>255</length>
    <type>Text</type>
</CustomField>