unpackaged/main/default/objects/Cout_de_transport__c/fields/Icone_Statut__c.field-meta.xml
<CustomField>
    <fullName>Icone_Statut__c</fullName>
    <formula>IF 
( ISPICKVAL(  Statut__c    ,&quot;Brouillon&quot;) 
, 
IMAGE(&quot;/resource/1552575744000/ICONS_CdT_Draft&quot;, &quot;Brouillon&quot;, 30 ,30 ) 
, 

IF 
( ISPICKVAL(  Statut__c    ,&quot;En attente de validation&quot;) 
, 
IMAGE(&quot;/resource/1556803231000/ICONS_CdT_En_attente_de_validation&quot;, &quot;En attente de validation&quot;, 30 ,30 ) 
, 


IF 
( 
ISPICKVAL(  Statut__c   , &quot;Validé par la direction commerciale&quot;) 
, 
IMAGE(&quot;/resource/1552570497000/ICONS_ADR_Actif&quot;, &quot;Validé par la direction commerciale&quot;, 30 ,30) 
, 
IF 
( 
ISPICKVAL(  Statut__c   , &quot;Rejeté par la direction commerciale&quot;) 
, 
IMAGE(&quot;/resource/1552570520000/ICONS_ADR_Inactif&quot;, &quot;Rejeté par la direction commerciale&quot;, 30, 30) 
, 
&quot;&quot; 
) 
) 
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Icone Statut</label>
    <type>Text</type>
</CustomField>