unpackaged/main/default/objects/Cout_de_transport__c/fields/N_identifiant_du_cout__c.field-meta.xml
<CustomField>
    <fullName>N_identifiant_du_cout__c</fullName>
    <displayFormat>{00000}</displayFormat>
    <label>N° identifiant du coût</label>
    <type>AutoNumber</type>
</CustomField>