unpackaged/main/default/objects/Cout_de_transport__c/fields/Precision_sur_le_cout__c.field-meta.xml
<CustomField>
    <fullName>Precision_sur_le_cout__c</fullName>
    <label>Précision sur le coût</label>
    <length>20</length>
    <type>Text</type>
</CustomField>