unpackaged/main/default/objects/Cout_de_transport__c/fields/Prestation_de_transport__c.field-meta.xml
<CustomField>
    <fullName>Prestation_de_transport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prestation de transport</label>
    <referenceTo>Prestation_de_transport__c</referenceTo>
    <relationshipLabel>Coûts de transport</relationshipLabel>
    <relationshipName>Couts_de_transport</relationshipName>
    <type>Lookup</type>
</CustomField>