unpackaged/main/default/objects/Cout_de_transport__c/fields/TECH_Email_N_2__c.field-meta.xml
<CustomField>
    <fullName>TECH_Email_N_2__c</fullName>
    <formula>Owner:User.Manager.Manager.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_Email N+2</label>
    <type>Text</type>
</CustomField>