unpackaged/main/default/objects/Cout_de_transport__c/fields/TECH_New_Responsable__c.field-meta.xml
<CustomField>
    <fullName>TECH_New_Responsable__c</fullName>
    <label>TECH_New_Responsable</label>
    <type>Email</type>
</CustomField>