unpackaged/main/default/objects/Cout_de_transport__c/fields/Type_d_emetteur__c.field-meta.xml
<CustomField>
    <fullName>Type_d_emetteur__c</fullName>
    <label>Type d’émetteur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Laboratoire</fullName>
            </value>
            <value>
                <fullName>Fournisseur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>