unpackaged/main/default/objects/Cout_de_transport__c/recordTypes/Facture_directe_Laboratoire_ou_Transporteur.recordType-meta.xml
<RecordType>
    <fullName>Facture_directe_Laboratoire_ou_Transporteur</fullName>
    <active>true</active>
    <label>Facture directe Laboratoire ou Transporteur</label>
</RecordType>