unpackaged/main/default/objects/Cout_de_transport__c/recordTypes/Prestation_transport_specifique_ou_Mise_a_disposition_de_vehicules.recordType-meta.xml
<RecordType>
    <fullName>Prestation_transport_specifique_ou_Mise_a_disposition_de_vehicules</fullName>
    <active>true</active>
    <label>Prestation transport spécifique ou Mise à disposition de véhicules</label>
</RecordType>