unpackaged/main/default/objects/Cout_de_transport__c/validationRules/Champs_non_modifiables_statut_valide.validationRule-meta.xml
<ValidationRule>
    <fullName>Champs_non_modifiables_statut_valide</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Statut__c,&quot;Validé par la direction commerciale&quot;) &amp;&amp;  (ISCHANGED(Cout_mensuel_attendu_TTC__c) || ISCHANGED(   Date_de_demarrage__c)|| ISCHANGED(   Date_de_fin__c) || ISCHANGED(TVA_applicable__c) ||  ISCHANGED(Type_d_emetteur__c)  ||  ISCHANGED( RecordTypeId ) ||  ISCHANGED(Type_de_cout__c )) &amp;&amp;  $User.Tech_By_Pass_VR__c = false &amp;&amp;  TECH_By_Pass_VR_CdT_Valide__c = false
&amp;&amp; $User.ProfileId &lt;&gt; &quot;00e1t000000qbGv&quot;</errorConditionFormula>
    <errorMessage>Merci de ne pas modifier les champs Coût mensuel attendu TTC, Date de démarrage, Date de fin, TVA applicable, type d&#39;émetteur, type d&#39;enregistrement et type de coût une fois que le statut est validé</errorMessage>
</ValidationRule>