unpackaged/main/default/objects/Cout_de_transport__c/validationRules/VR_CdT_date_de_fin_1er.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_CdT_date_de_fin_1er</fullName>
    <active>true</active>
    <errorConditionFormula>DAY(  Date_de_fin__c  ) &lt;&gt; 1 &amp;&amp;  $User.Tech_By_Pass_VR__c =false</errorConditionFormula>
    <errorDisplayField>Date_de_fin__c</errorDisplayField>
    <errorMessage>Merci de renseigner la date de fin au premier jour du mois</errorMessage>
</ValidationRule>