unpackaged/main/default/objects/Cout_de_transport__c/listViews/Mes_couts_en_attente_de_validation.listView-meta.xml
<ListView>
    <fullName>Mes_couts_en_attente_de_validation</fullName>
    <columns>NAME</columns>
    <columns>Contrat__c</columns>
    <columns>Type_de_cout__c</columns>
    <columns>Type_d_emetteur__c</columns>
    <columns>Date_de_demarrage__c</columns>
    <columns>Date_de_fin__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>En attente de validation</value>
    </filters>
    <label>Mes coûts en attente de validation</label>
</ListView>