unpackaged/main/default/objects/Cout_de_transport__c/listViews/Mises_disposition_de_vehicules.listView-meta.xml
<ListView>
    <fullName>Mises_disposition_de_vehicules</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Type_de_cout__c</columns>
    <columns>Icone_Statut__c</columns>
    <columns>Derniere_mise_jour_des_montants__c</columns>
    <columns>Cout_mensuel_attendu_TTC__c</columns>
    <columns>Date_de_demarrage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_de_cout__c</field>
        <operation>equals</operation>
        <value>V</value>
    </filters>
    <label>Mises à disposition de véhicules</label>
</ListView>