unpackaged/main/default/objects/Cout_de_transport__c/listViews/Prestations_de_transport_sp_cifique.listView-meta.xml
<ListView>
    <fullName>Prestations_de_transport_sp_cifique</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Type_de_cout__c</columns>
    <columns>Icone_Statut__c</columns>
    <columns>Derniere_mise_jour_des_montants__c</columns>
    <columns>Cout_mensuel_attendu_TTC__c</columns>
    <columns>Date_de_demarrage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_de_cout__c</field>
        <operation>equals</operation>
        <value>S</value>
    </filters>
    <label>Prestations de transport spécifique</label>
</ListView>